Fixing product title overlap issue with produce price

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -112,6 +112,8 @@
 
     @include breakpoint("medium") {
         font-size: 18px;
+        max-width: 36.5rem;
+        overflow-wrap: break-word;
     }
 }
 
